--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ dist.jlink.output=${dist.jlink.dir}/Projeto_Vendas
 endorsed.classpath=
 excludes=
 file.reference.dom4j-1.6.1.jar=..\\..\\..\\Desktop\\BuscaCep\\BuscaCep\\dom4j-1.6.1.jar
-file.reference.dom4j-1.6.1.jar-1=..\\..\\..\\Desktop\\mysql-connector-java-8.0.30\\dom4j-1.6.1.jar
+file.reference.dom4j-1.6.1.jar-2=ScriptMySQL\\dom4j-1.6.1.jar
+file.reference.mysql-connector-java-8.0.30.jar=ScriptMySQL\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL.classpath}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar-1}
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.dom4j-1.6.1.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
